[gd_scene load_steps=7 format=3 uid="uid://cwpq37000kaqi"]

[ext_resource type="Texture2D" uid="uid://px17kflnvnd7" path="res://ui/assets/icons/slot_left.svg" id="1_5j0eh"]
[ext_resource type="Texture2D" uid="uid://bexlgpgwakbrr" path="res://ui/assets/icons/slot_right.svg" id="2_53u4f"]
[ext_resource type="Script" path="res://nodes/background_node/background_node.gd" id="3_oaxk1"]
[ext_resource type="StyleBox" uid="uid://bmb6fo20hn20m" path="res://ui/theme_default/node_value.stylebox" id="4_qtkwm"]

[sub_resource type="Theme" id="Theme_llmqa"]

[sub_resource type="LabelSettings" id="LabelSettings_ae3bv"]
font_color = Color(0.572549, 0.572549, 0.572549, 1)

[node name="Background" type="GraphNode" groups=["graph_nodes"]]
offset_right = 273.0
offset_bottom = 82.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource("Theme_llmqa")
title = "SetterNode"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = ExtResource("1_5j0eh")
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = ExtResource("2_53u4f")
slot/0/draw_stylebox = false
script = ExtResource("3_oaxk1")
titlebar_color = Color(0, 0.505882, 0.501961, 1)

[node name="BackgroundContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="VBox" type="VBoxContainer" parent="BackgroundContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBox" type="HBoxContainer" parent="BackgroundContainer/VBox"]
layout_mode = 2
mouse_filter = 2

[node name="BgLabel" type="Label" parent="BackgroundContainer/VBox/HBox"]
layout_mode = 2
text = "Set Background to Image"

[node name="PathLabel" type="Label" parent="BackgroundContainer/VBox/HBox"]
layout_mode = 2
theme_override_styles/normal = ExtResource("4_qtkwm")
text = "No Image"
label_settings = SubResource("LabelSettings_ae3bv")

[node name="PreviewRect" type="TextureRect" parent="BackgroundContainer/VBox"]
visible = false
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
expand_mode = 1
stretch_mode = 6
